# json-logic-cpp

./: -r-.deb  .gitignore  @proj_name@-r@revision@-.deb  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  LICENSE  README.md  cpack.cmake  jsonlogic-0.1-Linux.deb
_CPack_Packages/Linux/DEB/: -r-x86-.deb
_CPack_Packages/Linux/DEB/-r-x86-/: control  md5sums
src/: executiontest.cpp  json_logic.cpp  json_logic.h
src/jsonlogic/: exception.h
src/operations/array/: all.cpp  filter.cpp  in.cpp  map.cpp  merge.cpp  none.cpp  reduce.cpp  some.cpp
src/operations/data/: missing.cpp  missing_some.cpp  var.cpp
src/operations/logic/: and.cpp  different.cpp  equal.cpp  if.cpp  not.cpp  or.cpp  truthy.cpp
src/operations/misc/: log.cpp
src/operations/numeric/: addition.cpp  division.cpp  gt.cpp  gte.cpp  lt.cpp  lte.cpp  max.cpp  min.cpp  modulo.cpp  multiplication.cpp  subtraction.cpp
src/operations/string/: cat.cpp  substr.cpp
test/: CMakeLists.txt  add_rm_operation.cpp  fixture.h
test/operations/array/: all.cpp  filter.cpp  in.cpp  map.cpp  merge.cpp  none.cpp  reduce.cpp  some.cpp
test/operations/data/: missing.cpp  missing_some.cpp  var.cpp
test/operations/logic/: and.cpp  different.cpp  equal.cpp  if.cpp  not.cpp  or.cpp  truthy.cpp
test/operations/misc/: log.cpp
test/operations/numeric/: addition.cpp  division.cpp  gt.cpp  gte.cpp  lt.cpp  lte.cpp  max.cpp  min.cpp  modulo.cpp  multiplication.cpp  subtraction.cpp
test/operations/string/: cat.cpp  substr.cpp
